MicroserviceModules/SignalService/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalservice
  namespace: signalservice
spec:
  type: ClusterIP
  selector:
    app: signalservice
  ports:
  - name: http
    port: 8080
    targetPort: 8080
