MicroserviceModules/SignalService/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalservice-ingress
  namespace: signalservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: signalservice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signalservice
            port:
              number: 8080
